# file_tag_project

./: CMakeLists.txt  main.cxx
include/: FileSystem.h  file.h  folder.h  tag.h  utils.h
src/: FileSystem.cxx  file.cxx  folder.cxx  tag.cxx  utils.cxx
